# Warp-Compass

./: .gitattributes  .gitignore  AGENTS.md  DEPLOY.md  OKF-vs-Neo4j-report.md  OPERATOR-MANUAL.md  PROGRESS.md  README.md  deliverable.md
apps-script/: Code.gs  README.md
brain/: .env.example  README.md  docker-compose.yml  pyproject.toml
brain/src/warp_compass_brain/: __init__.py  cli.py  completeness.py  config.py  create_gate.py  crosspersona.py  cycle.py  extractor.py  ingest.py  models.py  ontology.py  planner.py  queues.py  resolve.py  slugs.py  threads.py
brain/src/warp_compass_brain/bus/: __init__.py  base.py  folder.py
brain/src/warp_compass_brain/docgen/: __init__.py  render.py  traverse.py
brain/src/warp_compass_brain/graphstore/: __init__.py  base.py  neo4j_store.py  okf_store.py
brain/src/warp_compass_brain/llm/: __init__.py  base.py  deepseek.py
brain/src/warp_compass_brain/vectorindex/: __init__.py  base.py  embedder.py  local_index.py
brain/tests/: conftest.py  test_bus.py  test_completeness.py  test_create_gate.py  test_crosspersona.py  test_cycle.py  test_docgen.py  test_extractor.py  test_graphstore.py  test_ingest.py  test_ontology.py  test_planner.py  test_resolve.py  test_threads.py
contracts/: answer-log.schema.json  node-card.schema.json  ontology.json  session-brief.schema.json
docs/: 00-context-and-rationale.md  01-functional-understanding.md  02-technical-approach.md  10-implementation-plan.md  ARCHITECTURE.md  DATA-CONTRACTS.md  DECISIONS.md  THEME.md
docs/plan/: phase-01-ontology-graphstore.md  phase-02-extractor-resolve.md  phase-03-completeness.md  phase-04-planner-briefs.md  phase-05-live-runner-typed.md  phase-06-pwa-host-proxy.md  phase-07-voice.md  phase-08-sync-registry.md  phase-09-cross-persona-conflict.md  phase-10-doc-generator.md  phase-11-drive-sync.md  phase-12-okf-store.md
pwa/: .dev.vars.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
pwa/functions/: _shared.ts  _sync.ts  health.ts  llm.ts  stt.ts  tsconfig.json  tts.ts
pwa/functions/sync/: answer-log.ts  brief.ts
pwa/scripts/: gen-icons.mjs  stt-eval.mjs
pwa/src/: App.tsx
pwa/src/avatar/: Avatar.tsx  WarpBot.tsx  bot.css  director.ts  index.ts  reactions.ts
pwa/src/runner/: answerlog.ts  harness.ts  index.ts  prompts.ts  runner.test.ts  runner.ts  session.ts  types.ts  validate.ts
pwa/src/runner/llm/: deepseek.ts  fake.ts  (+2 more)
pwa/src/screens/: SessionScreen.tsx
pwa/src/styles/: theme.css
pwa/src/sync/: bus.ts  index.ts  participant.ts  remote.test.ts  remote.ts  sync.test.ts
pwa/src/voice/: index.ts  mic.ts  stt.ts  tts.ts  types.ts  voice.test.ts
scripts/: README.md  migrate_neo4j_to_okf.py  run-round.ps1  run-round.sh
worker/: .dev.vars.example  README.md  package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
