[project]
name = "warp-compass-brain"
version = "0.1.0"
description = "Warp Compass — the cognition plane (laptop batch brain): extract -> resolve -> conflict/coverage -> planner over a Neo4j graph."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.23",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Local embeddings for candidate retrieval. Optional + lazy-imported: the resolve pipeline
# falls back to alias-only matching if this isn't installed. fastembed is ONNX-based (no torch),
# so it stays light. Install with: uv sync --extra vectors
vectors = [
    "fastembed>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "jsonschema>=4.22",  # validate emitted Session Briefs against contracts/ in tests
]

[tool.pytest.ini_options]
markers = [
    "neo4j: tests that require a live Neo4j instance (skipped unless one is reachable)",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Test fixtures use long inline JSON literals; readability beats reflowing them.
"tests/*" = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warp_compass_brain"]
